# SDL2-DearImGUI-Template

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
CMake/: Platform.cmake  PlatformApple.cmake  PlatformWeb.cmake  PostBuild.cmake  PostBuildApple.cmake  PostBuildLinux.cmake  PostBuildWeb.cmake  PostBuildWindows.cmake  SettingsRenderer.cmake
Submodules/: CMakeLists.txt  SDL2.cmake  imgui.cmake
src/: code.cmake  main.cpp  settings.cmake
src/SignalSlots/: MetaObject.h  SignalSlots.cmake  Signals.cpp  Signals.h
